--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -21,6 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary"
+                app:title="Photos"
                 app:layout_constraintTop_toTopOf="parent"
                 app:titleTextColor="@android:color/white">
             </android.support.v7.widget.Toolbar>
@@ -46,12 +47,14 @@
             app:layout_constraintVertical_bias="0.0">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/user_recycler"
+                android:id="@+id/recycler"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                app:adapter="@{viewModel.getPhotosAdapter()}"
+                app:layoutManager="android.support.v7.widget.GridLayoutManager"
+                app:spanCount="3"
                 android:orientation="vertical"
-                tools:listitem="@layout/album_item"/>
+                tools:listitem="@layout/photo_item"/>
         </android.support.v4.widget.SwipeRefreshLayout>
     </android.support.constraint.ConstraintLayout>
 </layout>
