--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -21,6 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/colorPrimary"
+                app:title="Albums"
                 app:layout_constraintTop_toTopOf="parent"
                 app:titleTextColor="@android:color/white">
             </android.support.v7.widget.Toolbar>
