--- a/app/src/main/res/layout/album_item.xml
+++ b/app/src/main/res/layout/album_item.xml
@@ -10,11 +10,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:elevation="10dp">
+        android:layout_marginBottom="10dp">
 
         <ImageView
             android:id="@+id/home_row_imageHolder"
