--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -33,13 +33,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:contentScrim="?attr/colorPrimary"
-                app:collapsingToolbarTittle="@{viewModel.getCurrentUser()}"
                 app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="256dp"
-                    app:userPhotoUrl="@{viewModel.getCurrentUser()}"
+                    app:photoUrl="@{viewModel.getCurrentPhoto()}"
                     android:scaleType="centerCrop"
                     app:layout_collapseMode="parallax"
                     android:id="@+id/activity_user_detail_imageView"/>
@@ -65,13 +64,8 @@
                     android:max="100"
                     app:mutableVisibility="@{viewModel.getLoadingVisibility()}"
                     android:backgroundTint="@color/design_default_color_primary"
-                    android:layout_below="@+id/framelauout"
                     android:indeterminateTint="#1a09d6"
                     android:layout_marginTop="-7dp"/>
-                <include layout="@layout/user_detail_card_number"
-                    app:viewModel="@{viewModel}"/>
-                <include layout="@layout/user_detail_card_addresses"
-                    app:viewModel="@{viewModel}"/>
                 <include layout="@layout/user_detail_card_other"
                     app:viewModel="@{viewModel}"/>
             </LinearLayout>
