--- a/app/src/main/res/layout/user_detail_card_other.xml
+++ b/app/src/main/res/layout/user_detail_card_other.xml
@@ -10,7 +10,7 @@
     </data>
 <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:elevation="20dp"
         xmnls:cardCornerRadius="10dp">
@@ -29,8 +29,8 @@
                 android:id="@+id/user_detail_card_other_textView"
                 android:textColor="#ab050505"
                 android:layout_toEndOf="@+id/user_detail_card_other_image"
+                app:photoData="@{viewModel.getCurrentPhoto()}"
                 android:layout_width="wrap_content"
-                app:userOtherInfo="@{viewModel.getCurrentUser()}"
                 android:layout_height="wrap_content"/>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
